--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -5,14 +5,14 @@ USER root
 COPY . ${HOME}
 RUN chown -R ${NB_USER} ${HOME}
 
-# RUN apt-get update -y\
-# && apt-get install -y dpkg-dev zlib1g-dev libssl-dev libffi-dev\
-# && apt-get install -y curl libcurl4-openssl-dev\
-# && apt-get install -y git\
-# && R -e "install.packages('remotes')"
-
 USER ${NB_USER}
 
 RUN wget https://github.com/zambujo/ercstats/raw/main/DESCRIPTION && R -e "options(repos = list(CRAN = 'http://mran.revolutionanalytics.com/snapshot/2020-03-16/')); devtools::install_deps()"
 
-RUN rm DESCRIPTION.1; exit 0
+USER root
+
+RUN rm DESCRIPTION.1
+
+USER ${NB_USER}
+
+RUN exit 0
